--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/goto-bus-stop/old-tape/issues"
   },
   "dependencies": {
+    "function-bind": "^1.1.1",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
